Fixed markdown having too much vertical margin for lists

--- a/Shared/css/markdown.css
+++ b/Shared/css/markdown.css
@@ -56,23 +56,14 @@
 		font-style: italic;
 }
 
-.descbox ul {
-  /*
-		margin-top: 0;
-		margin-bottom: 16px;
-		padding-left: 2em;
-    */
+.descbox ul, .descbox ol {
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 
-.descbox ul > li {
-		font-style: normal;
-		font-weight: normal;
-}
-
-.descbox ol {
-  /*
-		margin-left: 36px;
-    */
+.descbox ul > li, .descbox ol > li  {
+	font-style: normal;
+	font-weight: normal;
 }
 
 .descbox blockquote {
